Modified driver imgs and corrected text alignment

--- a/style.css
+++ b/style.css
@@ -28,9 +28,9 @@ body {
 }
 
 span.emoji {
-    font-size: 30px;
-    vertical-align: middle;
-    line-height: 2;
+    font-size: 40px;
+    vertical-align: baseline;
+    /* line-height: 9; */
 }
 
 .logo {
@@ -54,7 +54,7 @@ li {
     list-style: none;
     display: flex;
 }
-
+    
 .hero-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("imgs/hero-image");
     height: 550px;
@@ -117,14 +117,14 @@ li {
     height: 400px;
   }
   
-  .image {
+.image {
     display: block;
     width: 100%;
     height: 400px;
     border-radius: 10px;
   }
   
-  .overlay {
+.overlay {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -138,17 +138,18 @@ li {
     border-radius: 10px;
   }
   
-  .container:hover .overlay {
+.container:hover .overlay {
     opacity: 0.8;
   }
   
-  .text {
+.text {
     color: white;
     font-size: 20px;
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     text-align: start;
   }
+
